# Chonker3

./: .gitignore  AUTOMATION_README.md  Cargo.toml  README.md  VANILLA_1.0.txt  VENV_USAGE.md  VERSION.md  automate_chonker.applescript  automated_dev_loop.py  check_ocr_simple.py  chonker2.py  compare_ocr_engines.py  enhanced_chonker2.py  enhanced_chonker2_apple.py  enhanced_extraction.json  enhanced_merged.json  extract_and_analyze.py  extraction_analysis_20250731_223747.txt  extraction_analyzer.py  extraction_summary.json  extraction_visual_20250731_223747.html  force_apple_vision.py  json_analysis.py  make_executable.sh  ocr_comparison_results.json  preprocess_and_extract.py  pypdfium2_proper_extractor.py  robust_test.py  run.sh  scale_and_extract.py  scale_and_extract_simple.py  scale_pdf.py  scale_pdf.sh  scaled_extraction.json  setup_analysis.sh  setup_scripts.sh  simple_extractor.py  simple_extractor_fixed.py  simple_test_automation.py  smart_automation.py  (+17 more)
smart_automation/: analyze_iteration_1.txt
src/: extractor.rs  main.rs  types.rs
src/renderer/: document_canvas.rs  mod.rs
src/skia_renderer/: document_canvas.rs  mod.rs  pdf_renderer.rs
