[package]
name = "chonker3"
version = "1.0.0"  # VANILLA 1.0 - Stable text rendering version
edition = "2021"

[dependencies]
# GUI Framework - egui is much simpler than raw OpenGL
eframe = "0.29"
egui = "0.29"
egui_extras = "0.29"

# No PyO3 needed - we just shell out to Python

# JSON handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# File dialogs
rfd = "0.15"

# Async for background extraction
tokio = { version = "1.35", features = ["full"] }

# Error handling
anyhow = "1.0"

# PDF rendering
pdfium-render = "0.8"
image = "0.24"

# Logging
env_logger = "0.11"
log = "0.4"

# Time
chrono = "0.4"


[[bin]]
name = "chonker3"
path = "src/main.rs"